Added Data Science project files

--- a/python/numpy.ipynb
+++ b/python/numpy.ipynb
@@ -371,25 +371,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 49,
    "id": "f673176f-2584-4e97-ab26-40ddf0850187",
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'list1' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[42]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m arraylist=np.array(\u001b[43mlist1\u001b[49m)\n\u001b[32m      2\u001b[39m \u001b[38;5;28mprint\u001b[39m(arraylist)\n",
-      "\u001b[31mNameError\u001b[39m: name 'list1' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 2 3 4 5]\n"
      ]
     }
    ],
    "source": [
-    "\n",
-    "\n",
     "list1 = [1, 2, 3, 4, 5]\n",
     "\n",
     "arraylist = np.array(list1)\n",
@@ -462,8 +456,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "id": "13ea83ee-f11c-43ef-8240-273f745a9402",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([528, 616, 704, 792,   0])"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "array2[1,2]*array3[1,1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "f13d7b67-5441-42fb-b2e3-afda695021a2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 1,  4,  9, 16, 25],\n",
+       "       [36, 49, 64, 81,  0]])"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "array2**2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d8639cb1-5c19-4133-bdb6-2de0550769c9",
    "metadata": {},
    "outputs": [],
    "source": []
