--- a/python/print.ipynb
+++ b/python/print.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "0aa4b696-2c04-464a-a44a-f16a47fe6ce6",
+   "id": "3cff94f7-ea17-4a62-b12a-813fa869f56f",
    "metadata": {},
    "outputs": [
     {
@@ -15,13 +15,13 @@
     }
    ],
    "source": [
-    "print(\"hello\")"
+    "print('hello')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f9b31caa-339c-4683-9350-7ef2f6cb99c1",
+   "id": "c50b936a-7767-4917-8656-b4d134c975bb",
    "metadata": {},
    "outputs": [],
    "source": []
